# turbowifi-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  install-termux.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  robots.txt  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  release.yml  security.yml  tests.yml
src/turbowifi/: __init__.py  __main__.py  constants.py
src/turbowifi/ai/: __init__.py  baseline.py  predictor.py  recommender.py
src/turbowifi/cli/: __init__.py  daemon_cmd.py  dns_cmd.py  doctor_cmd.py  download_cmd.py  formatters.py  main.py  mtu_cmd.py  tcp_cmd.py  version_cmd.py
src/turbowifi/config/: settings.py
src/turbowifi/core/: auto.py  benchmark.py  capabilities.py  exceptions.py  orchestrator.py  platform.py  state_machine.py
src/turbowifi/daemon/: __init__.py  manager.py  persistence.py  scheduler.py  state.py  watchdog.py  worker.py
src/turbowifi/download/: __init__.py  downloader.py  exceptions.py  manager.py  progress.py  protocol.py  resume.py  scheduler.py  segment.py  storage.py  verifier.py
src/turbowifi/mtu/: state.py  (+10 more)
tests/: conftest.py
tests/integration/: test_installation.sh
tests/unit/: test_ai.py  test_auto.py  test_baseline.py  test_benchmark.py  test_capabilities.py  test_daemon.py  test_dns.py  test_download.py  test_mtu.py  test_platform.py  test_scanner.py  test_state_machine.py  test_storage.py  test_tcp.py  test_tui.py
(+18 files in other folders)
